# toylang

./: .clang-format  CMakeLists.txt
include/: ast.h  lexer.h
src/: ast.cpp  lexer.cpp  main.cpp
